--- a/contact-us.html
+++ b/contact-us.html
@@ -25,15 +25,14 @@
 <ul>
   <li><span class="contact">Auskick Coordinator: </span><span class="nowrap">TBD</span></li>
   <li><span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen</span></li>
-  <li>
-    <span class="contact">Head Trainer: </span><span class="nowrap">Chris Aveling - <a href="tel:0421 710 985">0421 710 985</a></span>
-  </li>
+  <li><span class="contact">Head Trainer: </span><span class="nowrap">TBD</span></li>
   <li><span class="contact">Senior Liaison: </span><span class="nowrap">Jono Merry</span></li>
-  <li><span class="contact">Marketing Coordinator: </span><span class="nowrap">Sally Delbridge</span></li>
+  <li>
+    <span class="contact">Marketing Coordinator: </span><span class="nowrap">Sally Delbridge - <a href="tel:0403 695 229">0403 695 229</a></span>
+  </li>
   <li><span class="contact">Grants Coordinator: </span><span class="nowrap">Wendy Gielen</span></li>
   <li><span class="contact">Merchandise & Uniform Coordinator: </span><span class="nowrap">Narelle Armstrong</span></li>
   <li><span class="contact">Website Administrator: </span><span class="nowrap">Lara Robertson</span></li>
-  <li><span class="contact">Bar Manager: </span><span class="nowrap">Tania Drew</span></li>
   <li><span class="contact">Bar Manager: </span><span class="nowrap">Jeff Murray</span></li>
   <li><span class="contact">General Committee: </span><span class="nowrap">Brent Armstrong</span></li>
   <li><span class="contact">General Committee: </span><span class="nowrap">Shaun Jones</span></li>
