--- a/contact-us.html
+++ b/contact-us.html
@@ -24,14 +24,18 @@
 <h2>2024 GENERAL COMMITTEE MEMBERS</h2>
 <ul>
   <li><span class="contact">Auskick Coordinator: </span><span class="nowrap">TBD</span></li>
-  <li><span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen</span></li>
+  <li>
+    <span class="contact">Child Safety Officer: </span><span class="nowrap">Wendy Gielen - <a href="tel:0414 747 608">0414 747 608</a></span>
+  </li>
   <li><span class="contact">Head Trainer: </span><span class="nowrap">TBD</span></li>
   <li><span class="contact">Senior Liaison: </span><span class="nowrap">Jono Merry</span></li>
   <li>
     <span class="contact">Marketing Coordinator: </span><span class="nowrap">Sally Delbridge - <a href="tel:0403 695 229">0403 695 229</a></span>
   </li>
   <li><span class="contact">Grants Coordinator: </span><span class="nowrap">Wendy Gielen</span></li>
-  <li><span class="contact">Merchandise & Uniform Coordinator: </span><span class="nowrap">Narelle Armstrong</span></li>
+  <li>
+    <span class="contact">Merchandise & Uniform Coordinator: </span><span class="nowrap">Narelle Armstrong - <a href="tel:0411 747 535">0411 747 535</a></span>
+  </li>
   <li><span class="contact">Website Administrator: </span><span class="nowrap">Lara Robertson</span></li>
   <li><span class="contact">Bar Manager: </span><span class="nowrap">Jeff Murray</span></li>
   <li><span class="contact">General Committee: </span><span class="nowrap">Brent Armstrong</span></li>
