update: remove phone number and assistant coach, add match report

--- a/contact-us.html
+++ b/contact-us.html
@@ -5,8 +5,7 @@
     ><span class="nowrap"><a href="president@bayswaterjfc.com.au" rel="nofollow">Beccy Dawber</a> - <a href="tel:0401 306 209">0401 306 209</a></span>
   </li>
   <li>
-    <span class="contact">Vice President: </span
-    ><span class="nowrap"><a href="vicepresident@bayswaterjfc.com.au" rel="nofollow">Ben Beveridge</a> - <a href="tel:0411 105 440">0411 105 440</a></span>
+    <span class="contact">Vice President: </span><span class="nowrap"><a href="vicepresident@bayswaterjfc.com.au" rel="nofollow">Ben Beveridge</a></span>
   </li>
   <li>
     <span class="contact">Secretary: </span
@@ -59,9 +58,7 @@
   <li>
     <span class="contact">Under 12 Mixed Coach: </span><span class="nowrap">Tim Cincotta - <a href="tel:0413 886 251">0413 886 251</a></span>
   </li>
-  <li>
-    <span class="contact">Under 13 Boys Coach: </span><span class="nowrap">Ben Beveridge - <a href="tel:0411 105 440">0411 105 440</a></span>
-  </li>
+  <li><span class="contact">Under 13 Boys Coach: </span><span class="nowrap">Ben Beveridge</span></li>
   <li>
     <span class="contact">Under 14 Girls Coach: </span><span class="nowrap">Max Mena - <a href="tel:0407 838 486">0407 838 486</a></span>
   </li>
