--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -1,8 +1,41 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    jQuery('#not-found').show();
+    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else jQuery('#not-found').show();
   });
 </script>
+<div id="r01" style="display: none">
+  <h3>Round 1</h3>
+  <p>
+    Congratulations to Seth and Jaxon both playing their 50th games today. These two boys have been fantastic players for Bayswater during their junior career.
+    We hope for another 50 games at least.
+  </p>
+  <p>The following players also played their first games with Bayswater today:</p>
+  <ul>
+    <li>Cooper Leach</li>
+    <li>Austin</li>
+    <li>Charles</li>
+    <li>Xane&nbsp;</li>
+  </ul>
+  <p>Well done to these boys and welcome to the team.</p>
+  <p>
+    Today was a nice start to the season with all players contributing throughout the day. Our drive from Dusty, Hamish and Marley in the middle all day was
+    outstanding. These boys will be a solid midfield unit this season.
+  </p>
+  <p>
+    I'd also like to say thank you to the 8 boys who played a quarter with Croydon South. I know they put in their best efforts when playing with them. As
+    mentioned a few months back, the change to the even up rule may see more games where this happens.
+  </p>
+  <p>
+    We saw 10 individual goal kickers, showing great team work throughout the day. We were even able to talk Seth out of the backline for a quarter, giving him
+    the chance to score a rare goal.
+  </p>
+  <p>
+    Overall, both Gavin and I were pleased with the effort today. There were some sensational passages of play and great team unity. We expect to see continual
+    improvement over the coming weeks as they boys get back into the flow of the season. This improvement is critical as harder games come our way.
+  </p>
+  <p>Go Baysie.</p>
+</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
