--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -1,8 +1,21 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    jQuery('#not-found').show();
+    if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else jQuery('#not-found').show();
   });
 </script>
+<div id="r01" style="display: none">
+  <h3>Round 1</h3>
+  <p>
+    The first round saw us take on North Ringwood at their home ground. The lead up to this game was really exciting, with a couple senior players taking
+    training on our final hit out on Wednesday before presenting the players with their jumpers. As game day arrived, we got to the ground feeling optimistic as
+    to what we could achieve. After a slowish start by our boys, the opposition controlled the game early and took a healthy lead going into half time. After
+    identifying where we needed to improve, we came out and flicked a switch kicking four goals to one in the second half to go down by five goals. Although we
+    lost on the day, as a team we will take a lot of positives moving forward. In particular, we got to see a handful of new players wearing the Bayswater
+    jumper, all who had an excellent first game for the club. Keep coming to training and working hard as a team, and I am positive a win will only be around
+    the corner.
+  </p>
+</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
