--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -1,8 +1,49 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
-    jQuery('#not-found').show();
+    if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else jQuery('#not-found').show();
   });
 </script>
+<div id="r02" style="display: none">
+  <h3>Round 2</h3>
+  <p>
+    Today was another difficult day, lining up against a strong Mitcham side. With some players playing with injury and others recovering from illness, it was
+    always going to be a hard task against a strong side.
+  </p>
+  <p>
+    The first quarter was excellent! We held the reigning premiers scoreless with an energetic and gritty start. Kyra held her opponent well, a great effort.
+    The team held its formation well and used the width of the ground to keep Mitcham at bay.
+  </p>
+  <p>
+    Mitcham kicked away from us as our depth was challenged in the next two quarters. &nbsp;We lost our way a little bit as the game moved to the centre of the
+    ground where Mitcham had the numbers and size, but this is something we can work on together as a team in the coming weeks.
+  </p>
+  <p>
+    We spoke to the players about the need for communication, shepherding, and using the width of the ground and lateral movement of the ball to our advantage.
+    We also spoke about keeping our formation and staying on our players. We will work on some drills that will address this.
+  </p>
+  <p>
+    It was good to have Lily back on deck and this gave Lexi a reprieve in the centre ruck contests. Mitcham had quite a few &lsquo;rucks&rsquo; and really
+    pressed our ruck duo hard, but they held strong and ball ups in the centre square were hard fought all day.
+  </p>
+  <p>
+    We laid some great tackles, had some great effective kicks, and kept the pressure on throughout a lot of the game, and we really showed that we are not too
+    far off being a formidable opponent to teams like this.
+  </p>
+  <p>
+    Raelene and Ella stayed in the backline for the duration of the match and had a hard job keeping the waves of attacks at bay, and this dynamic duo did well
+    against some very strong kickers. I am very proud of both girls as they maintained a composure well beyond their years in very trying circumstances. Lesser
+    players would have folded.
+  </p>
+  <p>
+    Clara was one of the standouts today, she showed her versatility, playing well in a few different roles, as we tried different tactics to stop their run.
+  </p>
+  <p>
+    Overall, our team had some great passages of play, laying some great tackles and effective disposals, and showing some great vision. Again, we are still
+    coming together as a team, coaches included, and we have had two difficult games that would have tested the mettle of any team. I have every confidence that
+    we can all grow together as a team and success is not far off.
+  </p>
+</div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
   <p>Sorry, we couldn't find a matching match report.</p>
