--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -15,6 +16,23 @@
     jumper, all who had an excellent first game for the club. Keep coming to training and working hard as a team, and I am positive a win will only be around
     the corner.
   </p>
+</div>
+<div id="r02" style="display: none">
+  <h3>Round 2</h3>
+  <p>
+    With the excitement of Izaac's 50th game and playing on our home ground for the first time this season, &nbsp;I thought the team had a red hot chance to
+    have a win against an opponent that won by over 100 points the week prior. We started off by kicking the first three goals in the first 10 minutes, which
+    gave the team and supporters so much excitement and joy. With Blackburn kicking back we went into the first break with the scores at about even. During the
+    second quarter, Blackburn got their hands on the ball a little more than we did, and kicked away to be up by 7 points at the main break.&nbsp;
+  </p>
+  <p>
+    At half time the team was full of confidence and was excited to continue to work hard for each other in the final half. I thought that with the extra
+    players we had, that if we ran hard we would eventually run over them. Unfortunately we wasted too many opportunities at goal in the third quarter kicking 1
+    goal 6 behinds to Blackburns 2 goals 2 behinds. After controlling most of the 3rd quarter without having much luck in front of goal, we went into the final
+    break being 9 points down. In the last quarter we continued to work really hard for each other as we did all the whole game, however, Blackburn had the
+    answers to win by one goal.&nbsp;
+  </p>
+  <p>I have so much faith in this team and believe if we continue to work hard at training we can beat anyone.&nbsp;</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
