--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
+    else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -16,6 +17,21 @@
   <p>We have definitely improved since our practice match which was very encouraging to see.</p>
   <p>Goals. Haylee 6, Shaylee 5, Matilda 2, Milly 2, Tiarnah, Jess</p>
   <p>Best. Matilda, Haylee, Chloe, Milly, Shaylee, Jade, Gemma</p>
+</div>
+<div id="r02" style="display: none">
+  <h3>Round 2</h3>
+  <p>Today we played Boronia at their senior ground which is a big ground.</p>
+  <p>We had a few players out so we only had 16 players against 20 for Boronia so we played with no bench.</p>
+  <p>We knew it was going to be a tough game with Boronia winning the flag last year and them having girls resting on the bench.</p>
+  <p>We went in with a very positive attitude and to try and play the best we can and making sure we talked and helped each other.</p>
+  <p>We started really well. It was pretty close in the first quarter but we worked a little bit harder to get a good lead at quarter time.</p>
+  <p>The second quarter was very even again but as we got tired, Boronia were able to kick a couple of goals to even things up at half time.</p>
+  <p>The second half was challenging for us and you could see the girls getting tired as the game went on, having no bench to rest the players.</p>
+  <p>Boronia probably had a bit more of the ball than us but our backline stood strong and did an amazing job to stop them kicking goals.</p>
+  <p>It was a very close finish but we ended up winning by 3 points even though the other team had more scoring shots.</p>
+  <p>The game could&rsquo;ve gone either way and luckily for us, it went our way.</p>
+  <p>Goals. Haylee, Matilda, Shaylee</p>
+  <p>Best. Matilda, Shaylee, Haylee, Milly, Chloe, Ella, Saanvi, Tiarnah.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
