--- a/teams-u12m.html
+++ b/teams-u12m.html
@@ -51,5 +51,7 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <p>Coming Soon...</p>
+  <ul>
+    <li><a href="/u12m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+  </ul>
 </div>
