--- a/teams-u14g.html
+++ b/teams-u14g.html
@@ -48,5 +48,7 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <p>Coming Soon...</p>
+  <ul>
+    <li><a href="/u14g-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+  </ul>
 </div>
