--- a/teams-u15b.html
+++ b/teams-u15b.html
@@ -9,7 +9,7 @@
         <b>Team Manager: </b><span class="nowrap">Michelle Willoughby - <a href="tel:0419 855 744">0419 855 744</a></span>
       </li>
       <li><b>Head Coach: </b><span class="nowrap">Luke Penn</span></li>
-      <li><b>Assistant Coach: </b><span class="nowrap">Steve Bickers</span></li>
+      <li><b>Assistant Coach: </b><span class="nowrap">Jake Dawber</span></li>
       <li><b>Trainer: </b><span class="nowrap">Beccy Dawber</span></li>
     </ul>
   </div>
@@ -51,5 +51,6 @@
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
   <ul>
     <li><a href="/u15b-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
+    <li><a href="/u15b-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
   </ul>
 </div>
