--- a/teams-u09m.html
+++ b/teams-u09m.html
@@ -53,5 +53,8 @@
 </div>
 <div>
   <h3 style="margin-top: 10px">MATCH REPORTS</h3>
-  <p>Coming Soon...</p>
+  <ul>
+    <li><a href="/u09m-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
+    <li><a href="/u09m-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+  </ul>
 </div>
