add match reports

--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -2,6 +2,7 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -35,6 +36,42 @@
   </p>
   <p>The team has kicked off the season with a bang, now having two games under their belt, showcasing promising signs for the journey ahead.</p>
   <p>We are all looking forward to the coming weeks, see you all on the track Friday night for another fun training session.</p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>Under perfect playing conditions, our under 9's mixed team gathered for their second home game of the season, facing off against Lysterfield.</p>
+  <p>
+    Continuing our focus from previous weeks, the team maintained a strong emphasis on running the ball forward and creating opportunities out the back of the
+    contest. This week, we introduced switching the ball, and it was fantastic to witness the team embracing this new strategy with enthusiasm and the
+    confidence to give it go.
+  </p>
+  <p>
+    Despite a few minor issues encountered during the game, rest assured that these were addressed promptly after the match, with umpires and Lysterfield's
+    coaches receiving our feedback positively. Our commitment remains unwavering in ensuring a safe and enjoyable environment for all our players.
+  </p>
+  <p>
+    Candice and Lennex showcased their growing confidence as they settled into the team, actively participating in the contest, and contributing to the team's
+    efforts. Meanwhile, Jett and Declan demonstrated excellent defensive skills, intercepting potential goals with goal line stoppages.
+  </p>
+  <p>
+    Randall and Frankie exhibited great teamwork, linking up with precision handballs and demonstrating relentless effort with their hard running. Max and Jack
+    led the charge in experimenting with the switch across the ground, setting a promising precedent for future matches.
+  </p>
+  <p>
+    On the adjacent field with Scott, Billy and Logan dominated the midfield with their outstanding intensity, while Phoenix and Harvey also had a crack at
+    switching the ball, which was exciting to see and will be something we continue to try in the round ahead. Cohen and Patrick's spectacular goals, along with
+    Johnny's fearless attack on the ball, added to the excitement of the weekend's matches.
+  </p>
+  <p>
+    We did miss Bella, who unfortunately has sustained a fracture and will be out of action for a few weeks. We have heard she may be down at training this week
+    to get some autographs on her plaster, which we would love to see. Take care Bella, we all wish you a speedy recovery.
+  </p>
+  <p>
+    A huge thanks to all our team officials and parent helpers this week! Special mention to Scott for going above and beyond taking extra time out during the
+    week to measure and mark out our grounds to the recommended length. The players loved the extended field, which facilitated better ball movement and
+    involvement. Thanks, Scott, for your dedication!
+  </p>
+  <p>Look forward to seeing everyone back on track this Friday.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
