--- a/teams-u15b.html
+++ b/teams-u15b.html
@@ -16,7 +16,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+      <p style="margin: 0">Monday 5pm - 6:30pm, Wednesday 5pm - 6:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
