--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -2,6 +2,7 @@
   jQuery(document).ready(function () {
     if (window.location.search.includes('id=r01')) jQuery('#r01').show();
     else if (window.location.search.includes('id=r02')) jQuery('#r02').show();
+    else if (window.location.search.includes('id=r03')) jQuery('#r03').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -32,6 +33,31 @@
   <p>The game could&rsquo;ve gone either way and luckily for us, it went our way.</p>
   <p>Goals. Haylee, Matilda, Shaylee</p>
   <p>Best. Matilda, Shaylee, Haylee, Milly, Chloe, Ella, Saanvi, Tiarnah.</p>
+</div>
+<div id="r03" style="display: none">
+  <h3>Round 3</h3>
+  <p>
+    It was a really nice day for footy and with the girls having a well fought out win last week, their confidence was high and were looking forward to having a
+    good game.
+  </p>
+  <p>
+    Montrose started very strong so it was a good contest by both sides. We were working hard but we just fell down in a couple of areas which enabled Montrose
+    to be in front.
+  </p>
+  <p>
+    The game continued in the same fashion. It was very close but they just had the upper hand on us when we weren&rsquo;t as good as we needed to be in a
+    couple of areas.
+  </p>
+  <p>
+    We fought the game right out and had more of the ball in the last quarter but couldn&rsquo;t get the goals on the board that we needed. We ended up losing
+    by 4 points.
+  </p>
+  <p>
+    The areas that we feel done on are only small things so if the girls work hard at training, I&rsquo;m sure we can improve on these and play more
+    consistently.
+  </p>
+  <p>Goals. Haylee 2, Jade.</p>
+  <p>Best. Haylee, Milly, Jade, Chloe, Gemma, Tiarnah, Keelie</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
