--- a/teams-u16g.html
+++ b/teams-u16g.html
@@ -15,7 +15,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+      <p style="margin: 0">Tuesday 5:30pm - 6:30pm, Thursday 6pm - 7:30pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
@@ -51,5 +51,6 @@
   <ul>
     <li><a href="/u16g-match-report/?id=r01" rel="nofollow">Round 1 Match Report</a></li>
     <li><a href="/u16g-match-report/?id=r02" rel="nofollow">Round 2 Match Report</a></li>
+    <li><a href="/u16g-match-report/?id=r03" rel="nofollow">Round 3 Match Report</a></li>
   </ul>
 </div>
