--- a/teams-u10m.html
+++ b/teams-u10m.html
@@ -15,7 +15,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+      <p style="margin: 0">Friday 6pm - 7pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
