--- a/teams-u13b.html
+++ b/teams-u13b.html
@@ -13,7 +13,7 @@
   <div class="col2">
     <div style="padding-top: 1em">
       <h4 style="margin-bottom: 5px">Training Times</h4>
-      <p style="margin: 0">TBD</p>
+      <p style="margin: 0">Monday 5:30pm - 6:30pm, Wednesday 5:30pm - 7pm</p>
     </div>
     <div style="padding-top: 0.5em">
       <h4 style="margin-bottom: 5px">Season Information</h4>
